# signLanguageTranslation

./: .gitignore  .python-version  README.md  SettingLogging.yaml  dvc.yaml  pyproject.toml
.dvc/plots/: linear_log.json  lr_vs_losses.json
dvclive/: metrics.json  params.yaml
dvclive/plots/metrics/: accuracies.tsv  losses.tsv  lr.tsv
dvclive/plots/metrics/train/: accuracy.tsv  loss.tsv
dvclive/plots/metrics/validation/: accuracy.tsv  dice.tsv  iou.tsv  loss.tsv
experiments/unet/: dvc.yaml
src/: App.py  app.py
src/data/: dataListGenc.py  pr.py
src/dataScienceDevelopment/metrics/: metricsUnet.py
src/dataScienceDevelopment/models/autoencoder/unet/: model_unet.py
src/dataScienceDevelopment/models/autoencoder/unet/layers/: conv.py  (+4 more)
src/dataScienceDevelopment/optimisers/: optimUnet.py
src/dataScienceDevelopment/schedulers/: schedulerUnet.py
src/dataScienceDevelopment/trainingLoops/: unetTraining.py
src/dataScienceDevelopment/utils/: estimatingOptimalLr.py  trainingReportUnet.py
src/dataSciencePipeline/: pipTrainingUnet.py
src/dataWrangling/: datasetWordSLC.py  gestureSegmentationDataset.py  pretrainingPeopleDataset.py
src/etl/: videoResampledDataIncrement.py
src/models/unet_2d/: unet2d.py
src/models/unet_2d/metrics/: accuracy.py
src/models/unet_2d/model/: bottleneck.py  conv2d.py  doubleConv2d.py  downConv2d.py  unet2d.py  upConv2d.py
src/models/unet_2d/optimisers/: optimUnet2dSGD.py
src/models/unet_2d/train/: estimate_reasonable_lr.py  train_model.py
src/utils/: Logger.py  filesCSV.py  logger.py  transformDataset.py  videoHandling.py
